kstr0k-build.yml: rename job; disable cron

--- a/.github/workflows/kstr0k-build.yml
+++ b/.github/workflows/kstr0k-build.yml
@@ -1,8 +1,8 @@
-name: Release AppImage
+name: kstr0k-jammy AppImage
 
 on:
-  schedule:
-    - cron: '0 0 * * *'
+  # schedule:
+  #   - cron: '0 0 * * *'
   workflow_dispatch:
 
 jobs:
