--- a/.github/workflows/tst.yml
+++ b/.github/workflows/tst.yml
@@ -21,9 +21,10 @@ jobs:
       - name: Get latest tags
         id: latest-tags
         env:
+          MYOWNER: ${{ github.repository_owner }}
+          MYREPO: ${{ github.event.repository.name }}
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: |
-          json=$(gh api graphql -F myowner=${{ github.repository_owner }} -F myrepo=${{ github.event.repository.name }} -f query='
+          GQL_Q1: |
             query($myowner:String!,$myrepo:String!) {
               appimage: repository(owner:$myowner, name:$myrepo) {
                 refs(refPrefix:"refs/tags/", last:2) {
@@ -36,14 +37,15 @@ jobs:
                 }
               }
             }
-          ')
-          printf '%s=%s\n' 'data' "$json" | tee -a "$GITHUB_OUTPUT"
+        run: |
+          json=$(gh api graphql -F myowner="$MYOWNER" -F myrepo="MYREPO" -f query="$GQL_Q1")
+          printf '%s\n' "json=$json" | tee -a "$GITHUB_OUTPUT"
 
       - name: Check updates
         id: check-updates
         run: |
-          tag0=${{ fromJSON(steps.latest-tags.outputs.data).appimage.refs.edges[0].node.name }}
-          tag1=${{ fromJSON(steps.latest-tags.outputs.data).appimage.refs.edges[1].node.name }}
+          tag0=${{ fromJSON(steps.latest-tags.outputs.json).data.appimage.refs.edges[0].node.name }}
+          tag1=${{ fromJSON(steps.latest-tags.outputs.json).data.appimage.refs.edges[1].node.name }}
           prev_vim_tag=$(printf '%s\n' "$tag0" "$tag1" | sort -r | grep -m1 '^v')
           vim_tag=${{ fromJSON(steps.latest-tags.outputs.data).vim.refs.edges[0].node.name }}
           vim_forced_tag=${{ github.event.inputs.vim_tag }}
