--- a/.github/workflows/tst.yml
+++ b/.github/workflows/tst.yml
@@ -44,6 +44,7 @@ jobs:
       - name: Check updates
         id: check-updates
         run: |
+          printf 'prev json: <\n%s\n>\n' ${{ steps.latest-tags.outputs.json }}
           tag0=${{ fromJSON(steps.latest-tags.outputs.json).data.appimage.refs.edges[0].node.name }}
           tag1=${{ fromJSON(steps.latest-tags.outputs.json).data.appimage.refs.edges[1].node.name }}
           prev_vim_tag=$(printf '%s\n' "$tag0" "$tag1" | sort -r | grep -m1 '^v')
