--- a/.github/workflows/tst.yml
+++ b/.github/workflows/tst.yml
@@ -47,3 +47,12 @@ jobs:
           printf '%s' 'prev json:'; cat <<'EOF'
           ${{ toJSON(fromJSON(steps.latest-tags.outputs.json).data.appimage.refs.edges[1].node.name) }}
           EOF
+          tag0=${{ fromJSON(steps.latest-tags.outputs.json).data.appimage.refs.edges[0].node.name }}
+          tag1=${{ fromJSON(steps.latest-tags.outputs.json).data.appimage.refs.edges[1].node.name }}
+          prev_vim_tag=$(printf '%s\n' "$tag0" "$tag1" | sort -r | grep -m1 '^v')
+          vim_tag=${{ fromJSON(steps.latest-tags.outputs.json).data.vim.refs.edges[0].node.name }}
+          vim_forced_tag=${{ github.event.inputs.vim_tag }}
+          if [ -n "${vim_forced_tag}" ]; then
+            vim_tag=$vim_forced_tag
+          fi
+          echo 'tags:' "(ours=${prev_vim_tag})" "(vim=${vim_tag})"
