--- a/.github/workflows/tst.yml
+++ b/.github/workflows/tst.yml
@@ -27,8 +27,8 @@ jobs:
           GQL_Q1: |
             query($myowner:String!,$myrepo:String!) {
               appimage: repository(owner:$myowner, name:$myrepo) {
-                refs(refPrefix:"refs/tags/", last:2) {
-                  edges { node { name } }
+                ref(qualifiedName: "refs/tags/v9.1.0225") {
+                  target { oid }
                 }
               }
               vim: repository(owner:"vim", name:"vim") {
@@ -38,21 +38,41 @@ jobs:
               }
             }
         run: |
-          json=$(gh api graphql -F myowner="$MYOWNER" -F myrepo="$MYREPO" -f query="$GQL_Q1")
-          printf '%s\n' "json=$json" | tee -a "$GITHUB_OUTPUT"
+          json=$(gh api graphql
+            -F myowner="$MYOWNER" -F myrepo="$MYREPO"
+            -f query="$GQL_Q1")
+          tee -a "$GITHUB_OUTPUT" <<EOGHO
+          json=$json
+          EOGHO
+
+      - name: Get previous release vim tag
+        id: prev-vim-tag
+        env:
+          MYOWNER: ${{ github.repository_owner }}
+          MYREPO: ${{ github.event.repository.name }}
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GQL_Q2: |
+            query($myowner:String!,$myrepo:String!,$tag_oid:String!) {
+              appimage: repository(owner:$myowner, name:$myrepo) {
+                object(oid: $tag_oid ) { ... on Tag { message }}
+              }
+            }
+        run: |
+          json=$(gh api graphql
+            -F myowner="$MYOWNER" -F myrepo="$MYREPO"
+            -F tag_oid=${{ fromJSON(steps.latest-tags.outputs.json).data.appimage.ref.target.oid }}
+            -f query="$GQL_Q2")
+          tee -a "$GITHUB_OUTPUT" <<EOGHO
+          json=$json
+          EOGHO
 
       - name: Check updates
         id: check-updates
         run: |
-          printf '%s' 'prev json:'; cat <<'EOF'
-          ${{ toJSON(fromJSON(steps.latest-tags.outputs.json).data.appimage.refs.edges[1].node.name) }}
-          EOF
-          tag0=${{ fromJSON(steps.latest-tags.outputs.json).data.appimage.refs.edges[0].node.name }}
-          tag1=${{ fromJSON(steps.latest-tags.outputs.json).data.appimage.refs.edges[1].node.name }}
-          prev_vim_tag=$(printf '%s\n' "$tag0" "$tag1" | sort -r | grep -m1 '^v')
           vim_tag=${{ fromJSON(steps.latest-tags.outputs.json).data.vim.refs.edges[0].node.name }}
           vim_forced_tag=${{ github.event.inputs.vim_tag }}
           if [ -n "${vim_forced_tag}" ]; then
             vim_tag=$vim_forced_tag
           fi
+          prev_vim_tag="${{ fromJSON(steps.prev-vim-tag.outputs.json).data.appimage.object.message }}"
           echo 'tags:' "(ours=${prev_vim_tag})" "(vim=${vim_tag})"
