kstr0k-build.yml: ensure tag available b4 anything

--- a/.github/workflows/kstr0k-build.yml
+++ b/.github/workflows/kstr0k-build.yml
@@ -67,6 +67,10 @@ jobs:
           updated=$([ ${prev_vim_tag} != ${vim_tag} ] && echo true)
           EOGHO
 
+      - name: Check release tag available
+        run: |
+          ! git rev-parse "${release_tag}^{tag}"
+
   create-appimage-job:
     runs-on: ubuntu-22.04
 
