kstr0k-build.yml: appimage.sh: both Vim, GVim

--- a/.github/workflows/kstr0k-build.yml
+++ b/.github/workflows/kstr0k-build.yml
@@ -120,15 +120,12 @@ jobs:
 
       - name: Dump failed screen tests
         run: |
-          bash scripts/dump_failed_screentests.sh
+          scripts/dump_failed_screentests.sh
 
-      - name: Create GVim AppImage
+      - name: Create GVim and Vim AppImage
         run: |
-          bash -e scripts/appimage.sh GVim
-
-      - name: Create Vim AppImage
-        run: |
-          bash -e scripts/appimage.sh Vim
+          export VERSION="${vim_tag}"
+          scripts/appimage.sh GVim Vim
 
       - name: Commit and push
         id: commit
