--- a/.github/workflows/kstr0k-build.yml
+++ b/.github/workflows/kstr0k-build.yml
@@ -101,6 +101,13 @@ jobs:
           sudo sysctl -w net.ipv6.conf.lo.disable_ipv6=0
           sudo bash vim/ci/setup-xvfb.sh
 
+      - name: Download tools
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          mkdir -p tools; cd tools
+          ../scripts/download-tools.sh
+
       - name: Build Vim
         run: |
           scripts/build_vim.sh
